# amavif

./: .env  .eslintrc-auto-import.json  LICENSE  README.md  components.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yaml
src/: App.vue  auto-imports.d.ts  i18n.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: encode.rs  lib.rs  main.rs
src/@types/: main.d.ts
src/components/: AddImages.vue  DropOverlay.vue  DropZone.vue  FooterControl.vue  ImageList.vue  ListContainer.vue  ListHeader.vue  ListStatus.vue  LoadingDialog.vue  LocaleSelect.vue  ProcessingDialog.vue  ProgressDialog.vue  SvgIcon.vue
src/layout/: AppLayout.vue  MainLayout.vue
src/libs/: convert.ts  feedback.ts  image-service.ts  notification.ts  utility.ts  utils.ts
src/locales/: en.json  ja.json
src/render/: svg-render.ts
src/store/: image.ts
src/style/: element-plus.css  main.css  override.css  variable.css
src/style/element-plus/: el-button.css  el-notification.css  index.css
src/types/: env.d.ts  globals.d.ts
