[package]
name = "Amavif"
version = "0.4.6"
description = "Simple tool for converting images to WebP/AVIF."
authors = ["Sachino Totome <@amamamaou>"]
edition = "2021"
license = "MIT License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "image_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = "0.24"
imgref = "1.11"
infer = "0.15"
ravif = "0.11"
rayon = "1.10"
rgb = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-store = "2.2"
webp = "0.2"
